welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: not found: value lireMessage
    o=lireMessage();
      ^